--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ var vm = function() {
     return 'https://img.mainframe2.com/login?account_type=' +
       encodeURIComponent(this.account()) +
       '&return_url=https://' + this.site() + '.bcx.buttonwood.net/frame' +
-      encodeURIComponent('?a=' + encodeURIComponent(JSON.stringify({hash: this.hash(), path: btoa(this.path())})));
+      encodeURIComponent('?a=' + encodeURIComponent(btoa(this.hash() + ' ' + this.path())));
   }, this);
 };
 ko.applyBindings(new vm());
